Ensure text remains visible during webfont load

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -4,3 +4,5 @@ $heading-font-family: "Inter", "Roboto", sans-serif;
   $body-font-family: "Inter var", "Roboto", sans-serif;
   $heading-font-family: "Inter var", "Roboto", sans-serif;
 }
+
+$fa-font-display: swap;
